fix: disable fade image on mobile, fix blog page-header title

--- a/css/_fade.scss
+++ b/css/_fade.scss
@@ -79,5 +79,6 @@
 @include media(1023) {
     .fade {
         display: none;
+        background-image: none;
     }
 }
