--- a/css/common/_page-header.scss
+++ b/css/common/_page-header.scss
@@ -110,6 +110,9 @@
             font-size: 2.2em;
             text-shadow: 0 0 2px #000000;
         }
+        &__title--fade {
+            min-height: 90px;
+        }
         &__subtitle {
             padding-bottom: 0;
             font-size: 1.5em;
